bdiofeed/bdiohid/src/builddb/err
builddb.cpp: In lambda function:
builddb.cpp:231:29: error: ‘noCaseEquals’ was not declared in this scope
  231 |                         if (noCaseEquals(str, "TtyDevice"))
      |                             ^~~~~~~~~~~~
builddb.cpp:236:29: error: ‘noCaseEquals’ was not declared in this scope
  236 |                         if (noCaseEquals(str, "TtyModel"))
      |                             ^~~~~~~~~~~~
builddb.cpp:241:29: error: ‘noCaseEquals’ was not declared in this scope
  241 |                         if (noCaseEquals(str, "Manufacturer"))
      |                             ^~~~~~~~~~~~
builddb.cpp:246:29: error: ‘noCaseEquals’ was not declared in this scope
  246 |                         if (noCaseEquals(str, "Model"))
      |                             ^~~~~~~~~~~~
builddb.cpp:251:59: error: ‘LookupUsageName’ was not declared in this scope
  251 |                         auto [isPage, isCollection, id] = LookupUsageName(str);
      |                                                           ^~~~~~~~~~~~~~~
builddb.cpp: In lambda function:
builddb.cpp:324:59: error: ‘LookupUsageName’ was not declared in this scope
  324 |                         auto [isPage, isCollection, id] = LookupUsageName(str);
      |                                                           ^~~~~~~~~~~~~~~
builddb.cpp: In lambda function:
builddb.cpp:371:59: error: ‘LookupUsageName’ was not declared in this scope
  371 |                         auto [isPage, isCollection, id] = LookupUsageName(str);
      |                                                           ^~~~~~~~~~~~~~~
builddb.cpp: In member function ‘Application::Device Application::ParseTokenStream(std::vector<Application::Token>)’:
builddb.cpp:460:1: warning: no return statement in function returning non-void [-Wreturn-type]
  460 | }
      | ^
builddb.cpp: In function ‘int main(int, char**)’:
builddb.cpp:470:29: error: ‘directory’ was not declared in this scope
  470 |     Application application(directory, database);
      |                             ^~~~~~~~~
builddb.cpp:470:40: error: ‘database’ was not declared in this scope
  470 |     Application application(directory, database);
      |                                        ^~~~~~~~
builddb.cpp: In lambda function:
builddb.cpp:387:21: warning: control reaches end of non-void function [-Wreturn-type]
  387 |                     }
      |                     ^
